# VTP-RCV-demo

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: DesignNotes.md  README.md  VTP-core-data-classes.md  webapi-to-backend-ballot-UML.md
src/vtp/: cli  core  ops
src/vtp-server/: api.py
src/vtp/web/api/: backend.py  json_data_models.py  main.py
src/vtp/web/api/mock-data/: blank-ballot.json  cast-ballot.json  receipt.70.json  show-contest-doc.json  tally-election-doc.json  verify-ballot-doc.json
tests/: test_api.py  test_main.py
