[tool.poetry]
name = "vtpwebapi"
version = "0.2.0"
description = "A Python API web server to demonstrate the use of VoteTrackerPlus for a mock election"
authors = ["Neil Johnson <neil@cadent.com>"]
license = "GNU General Public License v2.0"
readme = "README.md"
packages = [{include = "vtp", from = "src"}]

[tool.poetry.dependencies]
fastapi = "^0.110.0"
httpx = "^0.27.0"
importlib-resources = "^6.4.0"
python = "^3.10"
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
isort = "^5.13.0"
mypy = "^1.9.0"
pylint = "^3.1.0"
pytest = "^8.1.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
